--- a/src/CSMSNet.OcppAdapter.Server/CSMSNet.OcppAdapter.Server.csproj
+++ b/src/CSMSNet.OcppAdapter.Server/CSMSNet.OcppAdapter.Server.csproj
@@ -6,6 +6,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
